# Echo

./: .gitignore  README.md  ROBOT_PROGRESS.txt  rosboard
core/: IDENTITY.md  SOUL.md  USER.md
desktop/: start-echo-slam.desktop
docs/: AGENTS.md  TOOLS.md
echo_workspace/src/echo_bringup/: CMakeLists.txt  package.xml
echo_workspace/src/echo_bringup/config/: rviz_fake_sim.rviz
echo_workspace/src/echo_bringup/launch/: ekf_launch.py  mapping_launch.py  robot_description_launch.py  rviz_fake_sim_launch.py  rviz_launch.py  slam_launch.py
echo_workspace/src/echo_bringup/scripts/: open_echo_rviz.sh  start_echo_mapping.sh  start_echo_nav2.sh  start_echo_navigation.sh  start_echo_slam_esp32.sh  start_slam.sh  stop_echo_stack.sh
echo_workspace/src/echo_description/: CMakeLists.txt  package.xml
echo_workspace/src/echo_description/launch/: description.launch.py  visualize.launch.py
echo_workspace/src/echo_description/urdf/: 2wd_properties.urdf.xacro  4wd_properties.urdf.xacro  mecanum_properties.urdf.xacro
echo_workspace/src/echo_description/urdf/robots/: 2wd.urdf.xacro  4wd.urdf.xacro  mecanum.urdf.xacro  vattenkar.urdf.xacro
echo_workspace/src/echo_description/urdf/sensors/: generic_laser.urdf.xacro
echo_workspace/src/echo_hardware/: CMakeLists.txt  package.xml
echo_workspace/src/echo_navigation/: CMakeLists.txt  package.xml
echo_workspace/src/echo_perception/: CMakeLists.txt  package.xml
echo_workspace/src/echo_teleop/: CMakeLists.txt  package.xml
echo_workspace/src/echo_teleop/scripts/: fake_cmd_vel_odom.py  rviz_cmd_vel_sim.py
echo_workspace/src/echo_voice_ai/: CMakeLists.txt  package.xml
echo_workspace/src/echo_voice_ai/scripts/: wake_word.py
echo_workspace/src/echo_voice_ai/scripts/utils/: display_config.py  say_confirm.py  say_ground_rule.py  touchscreen_config.py
firmware/: esp32_micro_ros_imu.ino
memory/: MEMORY.md
reports/: 2026-03-09.md  2026-03-10.md  2026-03-15.md  2026-03-16.md  2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-26.md  2026-03-28.md  2026-03-29.md  2026-04-11.md  2026-04-12.md  2026-04-15.md  2026-04-20.md
robot_controller/: ekf.yaml  slam_config.yaml
robot_controller/robot_controller/: encoder_odometry.py
ros2_ws/src/robot_controller/: nav2_params.yaml  package.xml  setup.py
scripts/: echo_listener.py  start_robot.sh  webrtc_server.py
scripts/pi/: start_echo_nav2.sh  start_echo_slam_esp32.sh
scripts/utils/: pulse_led.py  say_hello.py  set_led.py  shout_seif.py
(+21 files in other folders)
