<?xml version="1.0"?>
<package format="3">
  <name>echo_bringup</name>
  <version>0.0.0</version>
  <description>Echo echo_bringup package</description>
  <maintainer email="ahmed@todo.todo">Ahmed</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
