<?xml version="1.0"?>
<package format="3">
  <name>echo_teleop</name>
  <version>0.0.0</version>
  <description>Echo echo_teleop package</description>
  <maintainer email="ahmed@todo.todo">Ahmed</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
